Closed
Bug 1841464
Opened 1 year ago
Closed 1 year ago
Make `PuppetWidget` stop sending invalid `ContentCache` to the parent process
Categories
(Core :: DOM: UI Events & Focus Handling, defect, P2)
Core
DOM: UI Events & Focus Handling
Tracking
()
RESOLVED
FIXED
117 Branch
Tracking | Status | |
---|---|---|
firefox117 | --- | fixed |
People
(Reporter: masayuki, Assigned: masayuki)
References
Details
(Keywords: inputmethod)
Attachments
(1 file)
That will cause a crash of the content process, but it just detects our bug(s). Therefore, we should make it sending wrong data which is created by ourselves.
Assignee | ||
Comment 1•1 year ago
|
||
Once PuppetWidget
sends invalid data, the parent process will return error
and that makes the sender content process crashed. Therefore, if we detect
that we created invalid data, we should not send the invalid data to avoid
the crash.
Updated•1 year ago
|
Attachment #9342078 -
Attachment description: Bug 1841464 - Make `ContentCacheInChild` should return `false` from caching content methods if it creates invalid data r=m_kato! → Bug 1841464 - Make `ContentCacheInChild` return `false` from caching content methods if it creates invalid data r=m_kato!
Pushed by masayuki@d-toybox.com:
https://hg.mozilla.org/integration/autoland/rev/15b08e43212d
Make `ContentCacheInChild` return `false` from caching content methods if it creates invalid data r=m_kato
Comment 3•1 year ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
status-firefox117:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 117 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•