Bug 1841464 - Make `ContentCacheInChild` return `false` from caching content methods if it creates invalid data r=m_kato

Once `PuppetWidget` sends invalid data, the parent process will return error
and that makes the sender content process crashed.  Therefore, if we detect
that we created invalid data, we should not send the invalid data to avoid
the crash.

Differential Revision: https://phabricator.services.mozilla.com/D182652